# flask-controle-de-ativos

./: .gitignore  .~lock.cálculo de horas.ods#  README.md  app.py  deploy.bat  migration.py  package.json  pyproject.toml  requirements.txt
app/: __init__.py
app/models/: Model.py  __init__.py
app/routes/auth/: routes.py
app/routes/auth/template/: 2FA.html  login.html  register.html
app/routes/homepage/: routes.py
app/routes/homepage/template/: homepage.html
app/routes/homepage/templates/: homepage.html
app/routes/logistic/: routes.py
app/routes/logistic/templates/: homepage.html  homepage_logistic_center.html
app/routes/logistic_center/: routes.py
app/routes/product/: routes.py
app/routes/product/templates/: homepage_products.html
app/routes/templates/: base.html
app/routes/templates/auth/: 2FA.html  login.html
app/routes/templates/home/: homepage.html
app/routes/templates/logistic/: edit.html  homepage.html
app/routes/templates/modules/lorem/: lorem.html
app/routes/templates/modules/navbar/: navbar.html
app/routes/templates/modules/sidebar/: sidebar.html
app/routes/templates/modules/tables/: allLogisticCenter.html  allProducts.html  table-with-all.html
app/routes/templates/product/: homepage.html
